--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
 <div class="center jumbotron">
     <h1>Welcome to the sample</h1>
     <h2>This is the tutorial</h2>
-    <%= link_to "Signup now!", "#", class: "btn btn-lg btn-primary" %>
+    <%= link_to "Signup now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
 <%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
